RESOLVED FIXED308151
CRASH at WebKit::RemoteMediaSessionHelperProxy::ref const
https://bugs.webkit.org/show_bug.cgi?id=308151
Summary CRASH at WebKit::RemoteMediaSessionHelperProxy::ref const
Jer Noble
Reported 2026-02-18 12:34:21 PST
CRASH at WebKit::RemoteMediaSessionHelperProxy::ref const
Attachments
Jer Noble
Comment 1 2026-02-18 12:34:22 PST
Jer Noble
Comment 2 2026-02-18 12:37:06 PST
EWS
Comment 3 2026-02-18 21:35:47 PST
Committed 307806@main (52ea8995f83e): <https://commits.webkit.org/307806@main> Reviewed commits have been landed. Closing PR #58941 and removing active labels.
EWS
Comment 4 2026-02-19 15:14:51 PST
Committed 305413.320@safari-7624-branch (ff3355baa109): <https://commits.webkit.org/305413.320@safari-7624-branch> Reviewed commits have been landed. Closing PR #4512 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.