Cherry-pick 52ea8995f83e. rdar://170741118

CRASH at WebKit::RemoteMediaSessionHelperProxy::ref const
    rdar://169244528
    https://bugs.webkit.org/show_bug.cgi?id=308151

    Reviewed by Eric Carlson.

    It should not be possible for the lifetime of a RemoteMediaSessionHelperProxy
    to outlast its owning GPUConnectionToWebProcess. However, that appears to
    have happened, and is guarded against elsewhere within RemoteMediaSessionHelperProxy.

    Null-check the output of m_gpuConnection.get() before using it, even in ::ref() and ::deref().

    Drive-by fix: use RefPtr instead of `auto` for storing the results of m_gpuConnection.get().

    * Source/WebKit/GPUProcess/media/ios/RemoteMediaSessionHelperProxy.cpp:
    (WebKit::RemoteMediaSessionHelperProxy::ref const):
    (WebKit::RemoteMediaSessionHelperProxy::deref const):
    (WebKit::RemoteMediaSessionHelperProxy::uiApplicationWillEnterForeground):
    (WebKit::RemoteMediaSessionHelperProxy::uiApplicationDidEnterBackground):
    (WebKit::RemoteMediaSessionHelperProxy::uiApplicationWillBecomeInactive):
    (WebKit::RemoteMediaSessionHelperProxy::uiApplicationDidBecomeActive):
    (WebKit::RemoteMediaSessionHelperProxy::externalOutputDeviceAvailableDidChange):
    (WebKit::RemoteMediaSessionHelperProxy::isPlayingToAutomotiveHeadUnitDidChange):
    (WebKit::RemoteMediaSessionHelperProxy::activeAudioRouteDidChange):
    (WebKit::RemoteMediaSessionHelperProxy::activeVideoRouteDidChange):
    (WebKit::RemoteMediaSessionHelperProxy::activeAudioRouteSupportsSpatialPlaybackDidChange):

    Canonical link: https://commits.webkit.org/307806@main

Identifier: 305413.320@safari-7624-branch