Source/WebKit/GPUProcess/media/ios/RemoteMediaSessionHelperProxy.cpp
@@ -53,12 +53,20 @@ RemoteMediaSessionHelperProxy::~RemoteMediaSessionHelperProxy()
 
 void RemoteMediaSessionHelperProxy::ref() const
 {
-    m_gpuConnection.get()->ref();
+    if (RefPtr connection = m_gpuConnection.get()) {
+        connection->ref();
+        return;
+    }
+    ASSERT_NOT_REACHED("RemoteMediaSessionHelperProxy outlived its owning GPUConnectionToWebProcess");
 }
 
 void RemoteMediaSessionHelperProxy::deref() const
 {
-    m_gpuConnection.get()->deref();
+    if (RefPtr connection = m_gpuConnection.get()) {
+        connection->deref();
+        return;
+    }
+    ASSERT_NOT_REACHED("RemoteMediaSessionHelperProxy outlived its owning GPUConnectionToWebProcess");
 }
 
 void RemoteMediaSessionHelperProxy::startMonitoringWirelessRoutes()
@@ -81,55 +89,55 @@ void RemoteMediaSessionHelperProxy::stopMonitoringWirelessRoutes()
 
 void RemoteMediaSessionHelperProxy::uiApplicationWillEnterForeground(SuspendedUnderLock suspendedUnderLock)
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ApplicationWillEnterForeground(suspendedUnderLock), { });
 }
 
 void RemoteMediaSessionHelperProxy::uiApplicationDidEnterBackground(SuspendedUnderLock suspendedUnderLock)
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ApplicationDidEnterBackground(suspendedUnderLock), { });
 }
 
 void RemoteMediaSessionHelperProxy::uiApplicationWillBecomeInactive()
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ApplicationWillBecomeInactive(), { });
 }
 
 void RemoteMediaSessionHelperProxy::uiApplicationDidBecomeActive()
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ApplicationDidBecomeActive(), { });
 }
 
 void RemoteMediaSessionHelperProxy::externalOutputDeviceAvailableDidChange(HasAvailableTargets hasAvailableTargets)
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ExternalOutputDeviceAvailableDidChange(hasAvailableTargets), { });
 }
 
 void RemoteMediaSessionHelperProxy::isPlayingToAutomotiveHeadUnitDidChange(PlayingToAutomotiveHeadUnit playing)
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::IsPlayingToAutomotiveHeadUnitDidChange(playing), { });
 }
 
 void RemoteMediaSessionHelperProxy::activeAudioRouteDidChange(ShouldPause shouldPause)
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ActiveAudioRouteDidChange(shouldPause), { });
 }
 
 void RemoteMediaSessionHelperProxy::activeVideoRouteDidChange(SupportsAirPlayVideo supportsAirPlayVideo, Ref<WebCore::MediaPlaybackTarget>&& target)
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ActiveVideoRouteDidChange(supportsAirPlayVideo, MediaPlaybackTargetContextSerialized { target.get() }), { });
 }
 
 void RemoteMediaSessionHelperProxy::activeAudioRouteSupportsSpatialPlaybackDidChange(SupportsSpatialAudioPlayback supportsSpatialPlayback)
 {
-    if (auto connection = m_gpuConnection.get())
+    if (RefPtr connection = m_gpuConnection.get())
         connection->connection().send(Messages::RemoteMediaSessionHelper::ActiveAudioRouteSupportsSpatialPlaybackDidChange(supportsSpatialPlayback), { });
 }
 
